fix z-index

--- a/src/components/StyledLink/styles.module.css
+++ b/src/components/StyledLink/styles.module.css
@@ -14,6 +14,7 @@
   box-sizing: border-box;
   min-width: 123px;
   display: inline-block;
+  z-index: 1;
 }
 .StyledLink::before {
   content: "";
